--- a/XueYuan/manifest.json
+++ b/XueYuan/manifest.json
@@ -4,9 +4,9 @@
     "version": "1.0",
 
     "description": "江西网络学院",
-	
+	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
 	"permissions": [
-		"http://www.jxgbwlxy.gov.cn/*",
+		"http://www.jxgbwlxy.gov.cn/*", "https://www.jxgbwlxy.gov.cn/*",
 		"tabs",
 		"webRequest",
 		"webRequestBlocking",
@@ -21,19 +21,22 @@
 	
     "content_scripts": [
 		{
-            "matches": ["http://www.jxgbwlxy.gov.cn/student/course_myrequired.do?searchType=1&menu=course", "http://www.jxgbwlxy.gov.cn/student/course_myselect.do?searchType=2&menu=course"],
+            "matches": [
+						"https://www.jxgbwlxy.gov.cn/student/course_myrequired.do*",
+						"https://www.jxgbwlxy.gov.cn/student/course_myselect.do*"
+						],
             "run_at": "document_idle",
             "js": ["jquery-3.6.min.js", "kecheng.js"],
 			"all_frames" : true
         },
 		{
-			"matches": ["http://www.jxgbwlxy.gov.cn/portal/study_play.do*"],
+			"matches": ["*://www.jxgbwlxy.gov.cn/portal/study_play.do*"],
             "run_at": "document_idle",
             "js": ["jquery-3.6.min.js", "study_play.js"],
 			"all_frames" : true
 		}, 
 		{
-			"matches": ["http://www.jxgbwlxy.gov.cn:10088/course/*"],
+			"matches": ["https://www.jxgbwlxy.gov.cn:8443/course/*"],
             "run_at": "document_idle",
             "js": ["jquery-3.6.min.js", "start_play.js"],
 			"all_frames" : true
