--- a/XueXi/extension/manifest.json
+++ b/XueXi/extension/manifest.json
@@ -47,7 +47,19 @@
             "js": ["my-points.js"],
 			"all_frames" : true
         }
-		
+		,
+		{
+			"matches": [
+				"https://www.xuexi.cn/?login",
+				"https://login.xuexi.cn/login/xuexiWeb?*"
+			],
+			"run_at": "document_start",
+			"js": [
+				"jquery-3.6.min.js",
+				"my-login.js"
+			],
+			"all_frames": true
+		}
     ],
 
 	"web_accessible_resources": ["jquery-3.6.min.js", "answer-inject-cnt.js", "ajax-hook.js", "mybase64.js", "my-points-inject.js", "my-hook-json-inject.js", "my-dati-inject.js", "shipin.json", "tuwen.json"]
