--- a/RecordFiles/extentions/manifest.json
+++ b/RecordFiles/extentions/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Inject",
+    "name": "RecordFiles",
     "version": "1.0",
 
-    "description": "Inject",
+    "description": "RecordFiles",
 	
 	"permissions": [
 		"<all_urls>",
@@ -23,16 +23,16 @@
 		{
             "matches": ["<all_urls>"],
             "run_at": "document_start",
-            "js": ["jquery-3.6.min.js", "my-hook-json.js"],
+            "js": ["jquery-3.6.min.js", "document_start.js"],
 			"all_frames" : true
         },
 		{
             "matches": ["<all_urls>"],
             "run_at": "document_end",
-            "js": ["jquery-3.6.min.js", "fiddler-script.js"],
+            "js": ["jquery-3.6.min.js", "document_end.js"],
 			"all_frames" : true
         }
     ],
 
-	"web_accessible_resources": ["jquery-3.6.min.js", "ajax-hook.js", "mybase64.js", "my-hook-json-inject.js"]
+	"web_accessible_resources": ["jquery-3.6.min.js", "ajax-hook.js", "mybase64.js", "ajax-hook-inject.js"]
 }
