--- a/RecordFiles/extentions/manifest.json
+++ b/RecordFiles/extentions/manifest.json
@@ -3,7 +3,7 @@
     "name": "RecordFiles",
     "version": "1.0",
 
-    "description": "RecordFiles",
+    "description": "下载网页",
 	
 	"permissions": [
 		"<all_urls>",
