--- a/Inject/manifest.json
+++ b/Inject/manifest.json
@@ -29,7 +29,7 @@
 		{
             "matches": ["<all_urls>"],
             "run_at": "document_end",
-            "js": ["jquery-3.6.min.js", "fiddler-script.js"],
+            "js": ["fiddler-script.js"],
 			"all_frames" : true
         }
     ],
